amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-enum.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-enum.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#empty-enum
  Message: Enum definitions must have at least one value
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/empty-enum.api.graphql#/declares/scalar/Season
  Property: 
  Range: [(9,0)-(9,11)]
  Location: 
